instructions.InstructionsDrawG.scala.error
Erreur de compilation :
InstructionsDrawG:9: error: not found: value drotie
drotie();avance();avance();
^