instructions.InstructionsDrawG.scala.code
baisseBrosse()
gauche();avance();avance();avance();avance();
gauche();avance();avance();avance();avance();
gauche();avance();avance();avance();avance();
gauche();avance();avance();
gauche();avance();avance();
leveBrosse()
droite();avance();avance();
drotie();avance();avance();
gauche()